@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0
'left to right direction

    class ShowGreenSpacesUI {
    }


    class ShowGreenSpacesByManagerController {
        - GreenSpaceRepository greenSpaceRepository
        - Repositories repositories
        - SortGreenSpaces sortGreenSpaces
        + ShowGreenSpacesByManagerController()
        + List<GreenSpace> showGreenSpaces(String sortOrder)
        - GreenSpaceRepository getGreenSpaceRepository()
        - String getResponsible()
    }

    class SortGreenSpaces {
        + List<GreenSpace> sortGreenSpaces(List<GreenSpace> greenSpaces) throws IOException
        - static void loadFileConfig() throws IOException
        - static List<GreenSpace> ascendingName(List<GreenSpace> greenSpaces)
        - static List<GreenSpace> descendingName(List<GreenSpace> greenSpaces)
        - static List<GreenSpace> bubbleSort(List<GreenSpace> greenSpaces)
        - static List<GreenSpace> insertionSort(List<GreenSpace> greenSpaces)
    }

    class GreenSpaceRepository {
        - List<GreenSpace> greenSpacesList
        + List<GreenSpace> getGreenSpacesByResponsible(String responsible)
    }

    class Repositories {
        - Repositories()
        + getInstance() : Repositories
        + getSkillRepository()
    }



ShowGreenSpacesUI ..> ShowGreenSpacesByManagerController

ShowGreenSpacesByManagerController ..> GreenSpaceRepository : greenSpaceRepository
ShowGreenSpacesByManagerController .> Repositories : Repositories
ShowGreenSpacesByManagerController ..> SortGreenSpaces : sortGreenSpaces

Repositories -> Repositories : instance
Repositories --> "1" GreenSpaceRepository
@enduml
